ncc/testsuite/positive/bug-1156.n
variant V {
  | A
  | B {
    this (_ : int) {}
    private this (_ : int * int) {}
    internal this (_ : int * int * int) {}
    public this (_ : double) {}
  }
}
_ = V.B (1.1);
