ncc/testsuite/negative/return-type2.n
class A { public this () {} }

class B {
  static f<'a> (_ : 'a) : 'a where 'a : A { A() }        // E: function return.*
}
